Update results endpoint
